--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,5 @@
 {% endif %}
     
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  {% include head-custom.html %}
   </head>
